--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "curbside-backend-dev",
+  "name": "youtube-clone-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
